Speaker Feedback: Fix feedback table on small screens

--- a/public_html/wp-content/plugins/wordcamp-speaker-feedback/assets/scss/style.scss
+++ b/public_html/wp-content/plugins/wordcamp-speaker-feedback/assets/scss/style.scss
@@ -300,8 +300,17 @@
 	}
 }
 
-#comments-form {
-	.fixed {
+.wp-list-table.fixed {
+	.is-expanded .column-name {
+		display: none !important; // Needs important to override expanded !important.
+	}
+
+	.column-feedback .comment-author {
+		display: none;
+		margin-bottom: 0.6em;
+	}
+
+	@media screen and (min-width: 783px) {
 		.column-name {
 			width: 15%;
 		}
@@ -311,11 +320,17 @@
 		}
 	}
 
-	.inappropriate {
-		th {
-			&.check-column {
-				border-left: 4px solid #ffb900;
-			}
+	@media screen and (max-width: 782px) {
+		.column-name {
+			display: none;
+		}
+
+		.column-feedback .comment-author {
+			display: block;
+		}
+
+		tr.is-expanded td:last-child {
+			padding-bottom: 1.5rem !important; // Needs important to override a long selector.
 		}
 	}
 }
@@ -326,5 +341,19 @@
 	&:hover {
 		color: #dc3232;
 		border: none;
+	}
+}
+
+.inappropriate {
+	th {
+		&.check-column {
+			border-left: 4px solid #ffb900;
+		}
+	}
+
+	.row-actions {
+		.unapprove {
+			display: none;
+		}
 	}
 }
